[metadata]
name = cyvincenty
version = 1.0.4
author = Jonathan Kosgei
author_email = jonathan@ipdata.co
description = Cython implementation of Vincenty distance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ipdata/cyvincenty
project_urls =
    Bug Tracker = https://github.com/ipdata/cyvincenty/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3